--- a/GadgetsOnline/Views/Shared/_Layout.cshtml
+++ b/GadgetsOnline/Views/Shared/_Layout.cshtml
@@ -2,8 +2,7 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet"
-          type="text/css" />
+    <link rel="stylesheet" href="~/Content/Site.css" asp-append-version="true" />
     <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")"
             type="text/javascript"></script>
 </head>
