--- a/GadgetsOnline/Views/Shared/_Layout.cshtml
+++ b/GadgetsOnline/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/Content/Site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")"
             type="text/javascript"></script>
 </head>
